*Empty MediaWiki Message*

--- a/Bagard.mw
+++ b/Bagard.mw
@@ -1,4 +1,3 @@
-
 Ing '''Bagard''' metung yang balen at [[commune in France|commune]] king [[Gard]]   ''[[Ding Departamentu ning France|départamentu]]'', king mauling [[France]].
 
 
@@ -11,5 +10,5 @@ Ing '''Bagard''' metung yang balen at [[commune in France|commune]] king [[Gard]
 
 [[Category:Ding Commune ning Gard]]
 
-[[fr:Bagard]]
 [[en:Bagard]]
+[[nl:Bagard]]
