The file [[:Image:Kidneys_from_behind.jpg]] has been replaced by [[:Image:Gray1120.png]] by administrator [[:commons:User:Rlevse]]: ''Was in category "Duplicate", although NOT an exact duplicate''. ''[[m:User:CommonsDelinker|Translate me!]]''

--- a/Batu.mw
+++ b/Batu.mw
@@ -3,7 +3,7 @@
   Latin        = ren |
   GraySubject  = 253 |
   GrayPage     = 1215 |
-  Image        = Kidneys_from_behind.jpg |
+  Image        =Gray1120.png |
   Caption      = Human kidneys viewed from behind with spine removed |
   Image2       = |
   Caption2     = |
