*Empty MediaWiki Message*

--- a/Imereti.mw
+++ b/Imereti.mw
@@ -1,12 +1,12 @@
 {{Infobox Region of Georgia
 |name              = Imereti
-|fullname          = Imereti Region
+|fullname          = Imereti Labuad
 |fullname_local    = იმერეთის მხარე
 |fullname_tran     = Imeretis Mkhare
 |iso               = GE-IM
 |capital           = [[Kutaisi]] {{speedy-image-c|[[2007-06-02]]}} 
 |governor          = [[Irakli Chogovadze]]
-|districts          = 10 districts, 1 city
+|districts          = 10 distritu, 1 lakanbalen
 |area              = 6,552
 |population        = 700,000 (2002)
 |administrativemap = [[Image:Geo-imer-map.png|300px]] 
