robot  Adding: [[sah:Category:1891 сыллаахха төрөөбүттэр]]

--- a/Category:1891_kebaitan.mw
+++ b/Category:1891_kebaitan.mw
@@ -38,6 +38,7 @@
 [[pl:Kategoria:Urodzeni w 1891]]
 [[ro:Categorie:Naşteri în 1891]]
 [[ru:Категория:Родившиеся в 1891 году]]
+[[sah:Category:1891 сыллаахха төрөөбүттэр]]
 [[simple:Category:1891 births]]
 [[sk:Kategória:Narodenia v 1891]]
 [[sl:Kategorija:Rojeni leta 1891]]
