robot  Adding: [[sah:Category:1897 сыллаахха төрөөбүттэр]]

--- a/Category:1897_kebaitan.mw
+++ b/Category:1897_kebaitan.mw
@@ -37,6 +37,7 @@
 [[pl:Kategoria:Urodzeni w 1897]]
 [[ro:Categorie:Naşteri în 1897]]
 [[ru:Категория:Родившиеся в 1897 году]]
+[[sah:Category:1897 сыллаахха төрөөбүттэр]]
 [[simple:Category:1897 births]]
 [[sk:Kategória:Narodenia v 1897]]
 [[sl:Kategorija:Rojeni leta 1897]]
