robot  Adding: [[sah:Category:1927 сыллаахха төрөөбүттэр]]

--- a/Category:1927_births.mw
+++ b/Category:1927_births.mw
@@ -39,6 +39,7 @@
 [[pl:Kategoria:Urodzeni w 1927]]
 [[ro:Categorie:Naşteri în 1927]]
 [[ru:Категория:Родившиеся в 1927 году]]
+[[sah:Category:1927 сыллаахха төрөөбүттэр]]
 [[simple:Category:1927 births]]
 [[sk:Kategória:Narodenia v 1927]]
 [[sl:Kategorija:Rojeni leta 1927]]
