robot  Modifying: [[uz:22-mart]]

--- a/Marsu_22.mw
+++ b/Marsu_22.mw
@@ -129,7 +129,7 @@ Ing '''[[Marsu 22]]''' ya ing  [[81 (numeru)|pang 81]]  a aldo ning banua keng [
 [[tr:22 Mart]]
 [[tt:22. Mart]]
 [[uk:22 березня]]
-[[uz:22 mart]]
+[[uz:22-mart]]
 [[vec:22 de marzso]]
 [[vi:22 tháng 3]]
 [[vls:22 moarte]]
