robot  Adding: [[sah:Category:1917 сыллаахха төрөөбүттэр]]

--- a/Category:1917_kebaitan.mw
+++ b/Category:1917_kebaitan.mw
@@ -38,6 +38,7 @@
 [[pl:Kategoria:Urodzeni w 1917]]
 [[ro:Categorie:Naşteri în 1917]]
 [[ru:Категория:Родившиеся в 1917 году]]
+[[sah:Category:1917 сыллаахха төрөөбүттэр]]
 [[sh:Category:Rođeni 1917.]]
 [[simple:Category:1917 births]]
 [[sk:Kategória:Narodenia v 1917]]
