--- a/Marsu_26.mw
+++ b/Marsu_26.mw
@@ -124,7 +124,7 @@ Ing '''[[Marsu 26]]''' ya ing  [[85 (numeru)|pang 85]]  a aldo ning banua keng [
 [[tr:26 Mart]]
 [[tt:26. Mart]]
 [[uk:26 березня]]
-[[uz:26 mart]]
+[[uz:26-mart]]
 [[vec:26 de marzso]]
 [[vi:26 tháng 3]]
 [[vo:Mäzul 26]]
