robot  Adding: [[sah:Category:1937 сыллаахха төрөөбүттэр]]

--- a/Category:1937_kebaitan.mw
+++ b/Category:1937_kebaitan.mw
@@ -39,6 +39,7 @@
 [[pl:Kategoria:Urodzeni w 1937]]
 [[ro:Categorie:Naşteri în 1937]]
 [[ru:Категория:Родившиеся в 1937 году]]
+[[sah:Category:1937 сыллаахха төрөөбүттэр]]
 [[sh:Category:Rođeni 1937.]]
 [[simple:Category:1937 births]]
 [[sk:Kategória:Narodenia v 1937]]
