robot  Adding: [[sah:Category:1937 сыл]]

--- a/Category:1937.mw
+++ b/Category:1937.mw
@@ -48,6 +48,7 @@
 [[pt:Categoria:1937]]
 [[ro:Categorie:1937]]
 [[ru:Категория:1937 год]]
+[[sah:Category:1937 сыл]]
 [[simple:Category:1937]]
 [[sk:Kategória:1937]]
 [[sl:Kategorija:Leto 1937]]
