robot  Adding: [[sah:Category:2000-с]]

--- a/Category:2000s.mw
+++ b/Category:2000s.mw
@@ -39,6 +39,7 @@
 [[pt:Categoria:Década de 2000]]
 [[ro:Categorie:Anii 2000]]
 [[ru:Категория:2000-е]]
+[[sah:Category:2000-с]]
 [[sh:Category:2000e]]
 [[simple:Category:2000s]]
 [[sk:Kategória:0. roky 21. storočia]]
