*Empty MediaWiki Message*

--- a/Kvemo_Kartli.mw
+++ b/Kvemo_Kartli.mw
@@ -14,7 +14,7 @@ Kvemo Kartlis mkhare
 |-
 | Populasyun: || 508,300 (2007)
 |-
-| Pangadake: || 1 town, 6 regions
+| Pangadake: || 1 balen, 6 a labuad
 |-
 | Tungku: || [[Rustavi]]
 |-
