--- a/Eneru_31.mw
+++ b/Eneru_31.mw
@@ -64,6 +64,7 @@ Ing '''[[Eneru 31]]''' ya ing  [[31 (numeru)|pangatlungpulu'tmetung]] aldo ning 
 [[gv:31 Jerrey Geuree]]
 [[he:31 בינואר]]
 [[hi:31 जनवरी]]
+[[hif:31 January]]
 [[hr:31. siječnja]]
 [[ht:31 janvye]]
 [[hu:Január 31]]
