robot  Adding: [[sah:Category:XXI үйэ]]

--- a/Category:Pang21ng_Dilanwa.mw
+++ b/Category:Pang21ng_Dilanwa.mw
@@ -64,6 +64,7 @@
 [[pt:Categoria:Século XXI]]
 [[ro:Categorie:Secolul XXI]]
 [[ru:Категория:XXI век]]
+[[sah:Category:XXI үйэ]]
 [[scn:Catigurìa:Sèculu XXI]]
 [[simple:Category:21st century]]
 [[sk:Kategória:21. storočie]]
