--- a/Category:Dilanwa.mw
+++ b/Category:Dilanwa.mw
@@ -47,6 +47,7 @@
 [[pt:Categoria:Séculos]]
 [[ro:Categorie:Secole]]
 [[ru:Категория:Века]]
+[[sah:Category:Үйэлэр]]
 [[simple:Category:Centuries]]
 [[sl:Kategorija:Stoletja]]
 [[sq:Category:Shekuj]]
