*Empty MediaWiki Message*

--- a/Kanpur.mw
+++ b/Kanpur.mw
@@ -27,7 +27,7 @@
 
 Ing '''Kanpur''' {{audio|Kanpur.ogg|pronunciation}} ([[Hindi]]: कानपुर, [[Urdu]]: '''کان پور''', a misulat ''Cawnpore'' bayu ing 1948) ing metung kareng lakanbalen o ciudad a maragul dili populasiun king pangulu ning [[India]], ampo ing dakal dili tau king [[Estadu ampong teritoriu ning India|estadu]] ning [[Uttar Pradesh]]. 
 
-== Suglung palual
+== Suglung palual ==
 * [http://www.kanpurnagar.nic.in/ Kanpur city portal]
 * [http://www.kanpurdehat.nic.in/ Kanpur Dehat portal]
 * [http://home.iitk.ac.in/~ramesh/abstracts/satmap_falk.JPG Kanpur Satellite Map]
