*Empty MediaWiki Message*

--- a/Karaikal.mw
+++ b/Karaikal.mw
@@ -1,4 +1,4 @@
-{{lonyamurin|Caracal}}
+{{seealso|Caracal}}
 <!-- See [[Wikipedia:WikiProject Indian cities]] for details -->{{Infobox Indian Jurisdiction |
 native_name = Karaikal | 
 type = city | 
