*Empty MediaWiki Message*

--- a/Karimnagar.mw
+++ b/Karimnagar.mw
@@ -22,7 +22,7 @@ website = |
 footnotes = |
 }}
 
-Ing '''Karimnagar''' ([[Telugu language|Telugu]]: కరీంనగర్, metung yang lakanbalen o ciudad king [[Karimnagar (distritu)]] king pangulung (''northern'') labuad ning [[Telangana]] king [[Estadu ampong teritoriu ning India|estadu]] ning [[Andhra Pradesh]], [[India]]. Iti ing pun tanggapan pangkapanibalan (''administrative headquarters'') ning [[Karimnagar (Distritu)]], king pampang ning ilug Manair, a mamagus paras king ilug Godavari. Katlu yang pekamaragul a lakanbalen king labuad (''region'') ning Telangana.
+Ing '''Karimnagar''' ([[Telugu language|Telugu]]: కరీంనగర్), metung yang lakanbalen o ciudad king [[Karimnagar (distritu)]] king pangulung (''northern'') labuad ning [[Telangana]] king [[Estadu ampong teritoriu ning India|estadu]] ning [[Andhra Pradesh]], [[India]]. Iti ing pun tanggapan pangkapanibalan (''administrative headquarters'') ning [[Karimnagar (Distritu)]], king pampang ning ilug Manair, a mamagus paras king ilug Godavari. Katlu yang pekamaragul a lakanbalen king labuad (''region'') ning Telangana.
 
 == Dalerayan ==
 {{Reflist}}
