--- a/Karnal.mw
+++ b/Karnal.mw
@@ -1,4 +1,4 @@
-{{For|other uses of Karnal}}
+{{Para|aliwang gamit ning Karnal}}
 <!-- See [[Wikipedia:WikiProject Indian cities]] for details -->{{Infobox Indian Jurisdiction |
 native_name = Karnal | 
 type = city | 
