*Empty MediaWiki Message*

--- a/Karnal.mw
+++ b/Karnal.mw
@@ -1,4 +1,4 @@
-{{Para|aliwang gamit ning Karnal}}
+{{For|aliwang gamit ning Karnal}}
 <!-- See [[Wikipedia:WikiProject Indian cities]] for details -->{{Infobox Indian Jurisdiction |
 native_name = Karnal | 
 type = city | 
