--- a/Template:For.mw
+++ b/Template:For.mw
@@ -1,2 +1,2 @@
-{{dablink|For {{{1}}}, see [[:{{{2|{{PAGENAME}} (disambiguation)}}}|{{{2|{{PAGENAME}} (disambiguation)}}}]]{{#if:{{{3|}}}|&#32;and [[{{{3}}}]]}}.}}<noinclude>{{pp-template|small=yes}}
+{{dablink|Para {{{1}}}, lon me ing [[:{{{2|{{PAGENAME}} (disambiguation)}}}|{{{2|{{PAGENAME}} (disambiguation)}}}]]{{#if:{{{3|}}}|&#32;and [[{{{3}}}]]}}.}}<noinclude>{{pp-template|small=yes}}
 {{documentation}}</noinclude>
