*Empty MediaWiki Message*

--- a/Karur.mw
+++ b/Karur.mw
@@ -1,4 +1,3 @@
-{{Cleanup|date=March 2007}}
 <sup></sup>{{Infobox Indian Jurisdiction
 | native_name = Karur
 | image_map = Karur.png
@@ -41,6 +40,8 @@ Ing '''Karur'''  ([[Tamil language|Tamil]] : கரூர் ) metung yang balen
 *[http://www.karurtoday.com Karur Today - News]
 *[http://www.chennaimuseum.org/draft/district/district.htm District Museum]
 {{Tamil Nadu}}
+
+{{stub}}
 
 [[Category:Cities and towns in Tamil Nadu]]
 
