*Empty MediaWiki Message*

--- a/Karwar.mw
+++ b/Karwar.mw
@@ -19,7 +19,7 @@ website = |
 footnotes = |
 }}
 
-Ing '''Karwar''' (''[[Kannada language|Kannada]]:'' [http://kn.wikipedia.org/wiki/%E0%B2%95%E0%B2%BE%E0%B2%B0%E0%B2%B5%E0%B2%BE%E0%B2%B0 '''ಕಾರವಾರ'''],[[Konkani]]-[[Karwar]], [[Marathi]]- कर्वार) ing tungku (capitoliu o cabecera) ning distritu ning [[Uttara Kannada]] king estadu ning [[Karnataka]], [[India]]. Metung yang malating balen king bebe ning dayatmalat king dake nang albugan (''west'') ning subcontinent ning India. Maki dayu yang labinglimang kilometru king mauli (''south'') ning angganan a [[Karnataka]]-[[Goa]]. 
+Ing '''Karwar''' ([[Kannada language|Kannada]]: '''ಕಾರವಾರ'''], [[Konkani]]: Karwar, [[Marathi]]: कर्वार) ing tungku (capitoliu o cabecera) ning distritu ning [[Uttara Kannada]] king estadu ning [[Karnataka]], [[India]]. Metung yang malating balen king bebe ning dayatmalat king dake nang albugan (''west'') ning subcontinent ning India. Maki dayu yang labinglimang kilometru king mauli (''south'') ning angganan a [[Karnataka]]-[[Goa]]. 
 
 == Suglung palual ==
 * [http://www.ekarwar.com Karwar Online]
