--- a/Kirandul.mw
+++ b/Kirandul.mw
@@ -31,6 +31,7 @@ Ing '''Kirandul''' metung yang lakanbalen o ciudad ampong metung a [[w:municipal
 {{Chhattisgarh-geo-stub}}
 
 [[bn:কিরনদুল]]
+[[en:Kirandul]]
 [[bpy:কিরনদুল]]
 [[new:किरणदुल]]
 [[pt:Kirandul]]
