*Empty MediaWiki Message*

--- a/Kochi,_India.mw
+++ b/Kochi,_India.mw
@@ -7,7 +7,7 @@
 |locator_position       = left
 |latd = 9.977 | longd   = 76.27
 |skyline              = Skyline_de_Kochi.jpg
-|skyline_caption        = Ernakulam, as seen from the Vembanad Lake
+|skyline_caption        = Ing Ernakulam, a mayayakit manibat king Dano Vembanad 
 |district               = [[Ernakulam district|Ernakulam]]
 |leader_title_1         = Mayor
 |leader_name_1          = [[Mercy Williams]]
