robot  Adding: [[os:Категори:Азтæ]], [[srn:Categorie:Yari]]

--- a/Category:Banua.mw
+++ b/Category:Banua.mw
@@ -55,6 +55,7 @@ Ing  [[Wikipedia:Category|categoria]] atin yang artikulung at mengapalyaring tun
 [[simple:Category:Years]]
 [[sk:Kategória:Roky]]
 [[so:Category:Sanad]]
+[[srn:Categorie:Yari]]
 [[sv:Kategori:Årtal]]
 [[sw:Category:Miaka]]
 [[tt:Törkem:Yıllar]]
