*Empty MediaWiki Message*

--- a/Kolar.mw
+++ b/Kolar.mw
@@ -34,7 +34,7 @@ Ing '''Kolar''' o '''Kolara''' ([[Kannada language|Kannada]]:ಕೋಲಾರ) {{
 ==Dalerayan==
 <references/>
 
-{{Citations missing|date=December 2006}}
+{{stub}}
 
 [[Category:cities and towns in Karnataka]]
 
