*Empty MediaWiki Message*

--- a/Sibutu.mw
+++ b/Sibutu.mw
@@ -5,11 +5,11 @@
  caption       = Mapa ning [[Tawi-Tawi]] papakit ne ing karinan ning Sitangkai. |
  region        = [[Autonomous Region in Muslim Mindanao]] |
  province      = [[Tawi-Tawi]] |
- districts     = [[Legislative district of Tawi-Tawi|Lone district of Tawi-Tawi]] |
+ districts     = [[Legislative district of Tawi-Tawi|Ya kabud distritu ning Tawi-Tawi]] |
  barangays     = 16 |
  class         =  |
  mayor         =  | 
- founded       = [[October 21]], [[2006]] |
+ founded       = [[Octubri 21]], [[2006]] |
  pop2000       =  24,515 |
  popden2000    = |
  areakm2       =  |
