*Empty MediaWiki Message*

--- a/Template:Tawi-Tawi.mw
+++ b/Template:Tawi-Tawi.mw
@@ -3,6 +3,6 @@
 |-
 | colspan="2" style="background:#ccccff; font-size: larger;" align="center" | '''[[Ding Balen ning Filipinas|Balen]]  ning [[Tawi-Tawi|Tawi-Tawi]]'''
 |-
-|style="padding:0px 5px"; align="center"| [[Bongao, Tawi-Tawi|Bongao]] | [[Languyan, Tawi-Tawi|Languyan]] | [[Mapun, Tawi-Tawi|Mapun]] | [[Panglima Sugala, Tawi-Tawi|Panglima Sugala]] | [[Sapa-Sapa, Tawi-Tawi|Sapa-Sapa]] | [[Simunul, Tawi-Tawi|Simunul]] | [[Sitangkai, Tawi-Tawi|Sitangkai]] | [[South Ubian, Tawi-Tawi|South Ubian]] | [[Tandubas, Tawi-Tawi|Tandubas]] | [[Turtle Islands, Tawi-Tawi|Turtle Islands]] 
+|style="padding:0px 5px"; align="center"| [[Bongao, Tawi-Tawi|Bongao]] | [[Languyan, Tawi-Tawi|Languyan]] | [[Mapun, Tawi-Tawi|Mapun]] | [[Panglima Sugala, Tawi-Tawi|Panglima Sugala]] | [[Sapa-Sapa, Tawi-Tawi|Sapa-Sapa]] | [[Sibutu, Tawi-Tawi|Sibutu]] [[Simunul, Tawi-Tawi|Simunul]] | [[Sitangkai, Tawi-Tawi|Sitangkai]] | [[South Ubian, Tawi-Tawi|South Ubian]] | [[Tandubas, Tawi-Tawi|Tandubas]] | [[Turtle Islands, Tawi-Tawi|Turtle Islands]] 
 |}
 </div>
