--- a/San_Jose,_Dinagat_Islands.mw
+++ b/San_Jose,_Dinagat_Islands.mw
@@ -27,7 +27,7 @@ Ing San Jose atin yang 12 [[barangay]]s.<ref>[http://www.nscb.gov.ph/activestats
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.t-macs.com/kiso/local/ 2000 Philippine Census Information]
 
-{{Dinagat Islands}}
+{{Dinagat Island}}
 {{Philippine Provincial Capitals}}
 {{Philippines-geo-stub}}
 
