--- a/Tubajon.mw
+++ b/Tubajon.mw
@@ -19,7 +19,7 @@ Ing Tubajon atin yang 9 a [[barangay]].
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.t-macs.com/kiso/local/ 2000 Philippine Census Information]
 
-{{Dinagat Islands}}
+{{Dinagat Island}}
 
 {{coord|10|18|N|125|34|E|display=title|region:PH_type:adm2nd_source:GNS-enwiki}}
 
