--- a/Kabuntalan,_Shariff_Kabunsuan.mw
+++ b/Kabuntalan,_Shariff_Kabunsuan.mw
@@ -18,7 +18,7 @@
 Ing '''Kabuntalan'''  pang5 yang clasing [[Ding Balen ning Filipinas|balen]] king [[Ding Lalawigan ning Filipinas|lalawigan]] ning [[Shariff Kabunsuan]], [[Filipinas]]. Agpang keng [[2000]] sensus, atin yang populasyun a 23,137 a katau kareng 4,223 a pamimalemale.
 
 
-==Barangays==
+==Deng Barangay==
 
 Kabuntalan is politically subdivided into 17 [[barangay]]s.
 {| border="0"
