*Empty MediaWiki Message*

--- a/Kota,_Rajasthan.mw
+++ b/Kota,_Rajasthan.mw
@@ -22,7 +22,7 @@ website = kota.nic.in|
 footnotes = |
 }}
 
-Ing '''Kota''' ([[Hindi]]:कोटा ''koṭa''), a sadia rang ausang ''Kotah'', metung yang lakanbalen o ciudad king [[Estadu ampong teritoriu ning India|estadu]] ning [[Rajasthan]] king pangulung (''northern'') [[India]]. Atiu king pampang ning [[w:Chambal River|Ilug Chambal]], at sentru ne ning kalakal nung nu la magpatubung [[bulak]], [[w:millet|millet]], [[trigu]], [[kulantru]], ampong [[w:oilseeds|oilseeds]]. Kayabe no man kareng industria da reng pamag-prosesu king bulak ampong oilseed, pamanabal tela, pamag-distill, pamangatas, ampong pamaglalang bageng ibat king atak o metal. Metung ya kareng manimunang sentru ning industria king pangulung India ing kota, at dakal lang cumpaniang chemical ampong engineering a makabasi keti. 
+Ing '''Kota''' ([[Hindi]]:कोटा ''koṭa''), a sadia rang ausang ''Kotah'', metung yang lakanbalen o ciudad king [[Estadu ampong teritoriu ning India|estadu]] ning [[Rajasthan]] king pangulung (''northern'') [[India]]. Atiu king pampang ning [[w:Chambal River|Ilug Chambal]], at sentru ne ning kalakal nung nu la magpatubung [[bulak]], [[w:millet|millet]], [[trigu]], [[kulantru]], ampong [[w:oilseeds|oilseeds]]. Kayabe no man kareng industria da reng pamag-prosesu king bulak ampong oilseed, pamanabal tela, pamag-distill, pamangatas, ampong pamaglalang bageng ibat king atak o metal. Metung ya kareng manimunang sentru ning industria king pangulung India ing Kota, at dakal lang cumpaniang chemical ampong engineering a makabasi keti. 
 
 ==Suglung palual==
 *[http://kota.nic.in/default.htm Official Website of Kota District]
