*Empty MediaWiki Message*

--- a/Kollam.mw
+++ b/Kollam.mw
@@ -28,7 +28,7 @@ footnotes= |
 }}
 {{For|distritung pareu lagiu|Kollam (Distritu)}}.
 
-Ing '''Kollam '''([[Malayalam]]:കൊല്ലം ) (a ausan dang '''Quilon''' deng [[Portuguese language|Portugues]] at agkas yang ''koy-lon'') metung yang lakanbalen o ciudad ampong metung a [[w:municipal corporation|municipal corporation]] king [[w:municipal corporation|municipal corporation]] king [[Estadu ampong teritoriu ning India|estadu]] ning [[Kerala]]. Kai dayu yang 71&nbsp;[[kilometru]] king pangulu (''north'') ning tungku (capitoliu o cabecera) ning estadu, ing [[Thiruvanathapuram]] (Trivandrum). Pun tanggapan ne ning [[Kollam (Distritu)]], metung kareng 14 a [[w:Districts of Kerala|distritu ning estadu ning Kerala]]. 
+Ing '''Kollam '''([[Malayalam]]:കൊല്ലം ) (a ausan dang '''Quilon''' deng [[Portuguese language|Portugues]] at agkas yang ''koy-lon'') metung yang lakanbalen o ciudad ampong metung a [[w:municipal corporation|municipal corporation]] king [[w:municipal corporation|municipal corporation]] king [[Estadu ampong teritoriu ning India|estadu]] ning [[Kerala]]. Maki dayu yang 71&nbsp;[[kilometru]] king pangulu (''north'') ning tungku (capitoliu o cabecera) ning estadu, ing [[Thiruvanathapuram]] (Trivandrum). Pun tanggapan ne ning [[Kollam (Distritu)]], metung kareng 14 a [[w:Districts of Kerala|distritu ning estadu ning Kerala]]. 
 
 == Dalerayan ==
 {{reflist}}
