*Empty MediaWiki Message*

--- a/Kolkata.mw
+++ b/Kolkata.mw
@@ -24,7 +24,7 @@
 |footnotes           = <sup>'''†'''</sup>&nbsp;The Kolkata urban agglomeration also includes portions of [[North 24 Parganas]] and [[South 24 Parganas]] districts.
 }}
 
-Ing {{Audio|Hi-Kolkata.ogg|'''Kolkata'''}} ({{lang-bn|কলকাতা}}), {{IPA2|'kolkat̪a}}, [[Indian renaming controversy|sadiang]] {{Audio|Hi-Calcutta.ogg|'''Calcutta'''}}, ing tungku (cabecera o capitoliu) ning [[Estadu ampong teritoriu ning India|estadu]] ning [[Albugang Bengal]] (West Bengal), [[India]]. Atiu iti king Aslagang India (East India), king aslagan nang pampang ning [[w:River Hooghly|Ilug Hooghly]]. Neng ausan deng "Kolkata", keraklan kayabe la reng kayang karulun (''suburbs''), ania ya maigit yang labing limang miliun ing kayang populasiun, at magi yang katlung pekamaragul a lakanbalen o ciudad ampong [[w:urban agglomeration|urban agglomeration]].   
+Ing {{Audio|Hi-Kolkata.ogg|'''Kolkata'''}} ({{lang-bn|কলকাতা}}), {{IPA2|'kolkat̪a}}, [[Indian renaming controversy|sadiang]] {{Audio|Hi-Calcutta.ogg|'''Calcutta'''}}, ing tungku (cabecera o capitoliu) ning [[Estadu ampong teritoriu ning India|estadu]] ning [[Albugang Bengal]] (West Bengal), [[India]]. Atiu iti king Aslagang India (East India), king aslagan nang pampang ning [[w:River Hooghly|Ilug Hooghly]]. Neng ausan deng "Kolkata", keraklan kayabe la reng kayang karulun (''suburbs''), ania miras yang maigit yang labing limang miliun ing kayang populasiun, at megi yang katlung pekamaragul a lakanbalen o ciudad ampong [[w:urban agglomeration|urban agglomeration]].   
 
 Migsilbi yang tungku ning India kanitang makalalam ya [[w:British Raj|makalalam ya pa king Britania ing India]], anggang 1911. Ing sadiang sentru ning makabayung pamanuru, industria, siensia, kalinangan ampong pulitika king India dinalan ya ing Kolkata king masipit a biolensia king pulitika, pamipate-pate ampong kayalang kasaplalan king kabiayan, manibat aniang 1954 angga ngeni. Nanupata, magumpisa aniang banuang 2000, mika pamagbayu king kabiayan o ekonomia, ania mika pamaniulparit (''spurt'') king pamandagul ning lakanbalen. Kalupa ka reng aliwang metropolitan a lakanbalen ning India, makipamuk ya pa murin ing Kolkata king urbanisasiun, kakaluluan, polusiun ampong trapiku.
 
