*Empty MediaWiki Message*

--- a/Kottayam.mw
+++ b/Kottayam.mw
@@ -4,7 +4,7 @@ type = city |
 latd = 9.58 | longd = 76.52|
 locator_position = right | 
 skyline              = Kottayam seematti jn.JPG|thumb |
-skyline_caption        = Seematti Junction, Kottayam|
+skyline_caption        = Ing Salapunga-dalan (''Junction'') ning Seematti, Kottayam|
 state_name = Kerala |
 district = [[Kottayam district|Kottayam]] |
 leader_title =Municipal Chairman |
