*Empty MediaWiki Message*

--- a/Leh.mw
+++ b/Leh.mw
@@ -3,7 +3,7 @@
 |type = city
 |latd = 34.17 | longd = 77.58
 |skyline=View of Leh.jpg 
-|skyline_caption=View of Leh from Namgyal Hill
+|skyline_caption=Bista ning Leh manibat king Talimunduk a Namgyal 
 |locator_position = right
 |state_name = Jammu and Kashmir 
 |district = [[Leh District]] 
