*Empty MediaWiki Message*

--- a/Leh.mw
+++ b/Leh.mw
@@ -30,7 +30,7 @@ Ing '''Leh''' ({{bo|t=གླེ་|w=Gle|script=yes}}) ing tungku (capitoliu o c
 
 * [[Wikipedia:WikiProject Indian cities]]
 
-== Karagdagang babasan ==
+== Karagdagan a babasan ==
 
 * Lonely Planet: Trekking in the Himalayas (Walking Guides) [http://www.alibris.com/search/search.cfm?S=R&qwork=-95980804&qsort=p&siteID=KLVmR9fE2yU-TEwzp.noGLx.y05XqpWKXQ]
 
