*Empty MediaWiki Message*

--- a/Ludhiana.mw
+++ b/Ludhiana.mw
@@ -1,4 +1,4 @@
-{{for|the district of the same name|Ludhiana District}}
+{{for|king distritung anti kaniti lagiu|Ludhiana District}}
 {{Infobox Indian Jurisdiction
 |type = city
 |native_name = Ludhiana
