*Empty MediaWiki Message*

--- a/Madikeri.mw
+++ b/Madikeri.mw
@@ -1,7 +1,7 @@
 {{Infobox Indian Jurisdiction |
 native_name=Madikeri |
 skyline=Raja_seat_madikeri.JPG|
-skyline_caption=Raja's Seat on a foggy morning in Madikeri|
+skyline_caption=Ing Raja's Seat misan a maulap a yabak king Madikeri|
 latd = 12.4208|longd=75.7397|
 state_name=Karnataka |
 district=[[Kodagu]] |
