*Empty MediaWiki Message*

--- a/Helena,_Montana.mw
+++ b/Helena,_Montana.mw
@@ -110,6 +110,7 @@
 [[sv:Helena, Montana]]
 [[sw:Helena, Montana]]
 [[ta:ஹெலேனா]]
+[[tr:Helena, Montana]]
 [[vi:Helena, Montana]]
 [[vo:Helena (Montana)]]
 [[zh:赫勒拿 (蒙大拿州)]]
