*Empty MediaWiki Message*

--- a/Pangulung_Kabuntalan.mw
+++ b/Pangulung_Kabuntalan.mw
@@ -1,5 +1,5 @@
 {{Infobox Philippine municipality |
- infoboxtitle  = Municipality of Northern Kabuntalan |
+ infoboxtitle  = Balen ning Pangulung Kabuntalan |
  sealfile      =  |
  locatormapfile= Ph_locator_maguindanao_kabuntalan.png  |
  caption       = Mapa ning [[Shariff Kabunsuan]] papakit ne ing karinan ning Kabuntalan. |
