*Empty MediaWiki Message*

--- a/Sultan_Mastura.mw
+++ b/Sultan_Mastura.mw
@@ -1,5 +1,5 @@
 [[Image:Ph_locator_maguindanao_sultan mastura.png|right|Mapa ning Maguindanao papakit ne ing karinan ning Sultan Mastura]]
-Ing '''Sultan Mastura''' metung yang clasing [[Ding Balen ning Filipinas|balen]] king [[Ding Lalawigan ning Filipinas|lalawigan]] ning [[Shariff Kabunsuan]], [[Filipinas]].
+Ing '''Sultan Mastura''' metung yang[[Ding Balen ning Filipinas|balen]] king [[Ding Lalawigan ning Filipinas|lalawigan]] ning [[Shariff Kabunsuan]], [[Filipinas]].
 
 ==Barangays==
 
