*Empty MediaWiki Message*

--- a/Madurai.mw
+++ b/Madurai.mw
@@ -4,7 +4,7 @@
 | latd = 9.8
 | longd = 78.10
 | skyline=Madurai 01.jpg
-| skyline_caption= Typical streetlife in Madurai
+| skyline_caption= Ing karaniwan a akakit kareng dalan ning Madurai
 | state_name = Tamil Nadu
 | district = [[Madurai district]]
 | language = Tamil
